--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -336,9 +336,7 @@
     "\n",
     "When working with text data, one of the first steps is to remove stop words from the corpus. Although text would be gramatically incorrect without these stop words, they provide little value to models and typically hinder performace.\n",
     "\n",
-    "We can use NLTK's built-in library of stop words to remove them in a tokenizing function.\n",
-    "\n",
-    "Additionally, we feature engineer text data into numerical vectors so that machine learning algorithms can understand it."
+    "We can use NLTK's built-in library of stop words to remove them in a tokenizing function."
    ]
   },
   {
@@ -515,7 +513,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Engineering"
+    "# Feature Engineering\n",
+    "\n",
+    "With Natural Language Processing, the purpose of feature engineering is to transform the tokenized text data into numerical vectors that the machine learning algorithm can \"understand.\"\n",
+    "\n",
+    "In this notebook, we'll be iterating through three different feature engineering techniques: **Count Vectorization, TF-IDF Vectorization and Doc2Vec**. Trying out these techniques could yield vastly different metrics on the same four baseline models."
    ]
   },
   {
@@ -523,7 +525,7 @@
    "metadata": {},
    "source": [
     "## Train-Test Split\n",
-    "First, let's create a train-test split of the dataset, where 20% is reserved as unseen testing data."
+    "First, let's perform a train-test split of the dataset, where 20% is reserved as unseen testing data."
    ]
   },
   {
@@ -542,9 +544,9 @@
    "source": [
     "## TF-IDF Vectorization\n",
     "\n",
-    "Before tokenized text data can be fed into machine learning models, it must be transformed into numerical feature vectors. First, we’ll be trying one of the most popular methods, TF-IDF Vectorization.\n",
+    "First, we’ll be trying one of the most popular methods, TF-IDF Vectorization.\n",
     "\n",
-    "This is an acronym than stands for “Term Frequency — Inverse Document” Frequency which are the components of the resulting scores assigned to each word.\n",
+    "This is an acronym that stands for “Term Frequency — Inverse Document” Frequency which are the components of the resulting scores assigned to each word.\n",
     "- Term Frequency: This summarizes how often a given word appears within a document.\n",
     "- Inverse Document Frequency: This down scales words that appear a lot across documents.\n",
     "\n",
@@ -557,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# using tf_idf vectorizor\n",
+    "# instantiating tf_idf vectorizer\n",
     "tfidf = TfidfVectorizer(stop_words= stop_words, ngram_range=(1,2))"
    ]
   },
@@ -567,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sparse matrix format with 20K stored elements\n",
+    "# transforming tokenized data into sparse matrix format with 20K stored elements\n",
     "X_train_tfidf = tfidf.fit_transform(X_train)\n",
     "X_test_tfidf = tfidf.transform(X_test)"
    ]
@@ -586,10 +588,9 @@
     }
    ],
    "source": [
-    "# taking a quick look of the non zero elements\n",
+    "# taking a quick look at the non zero elements\n",
     "non_zero_cols = X_train_tfidf.nnz / float(X_train_tfidf.shape[0])\n",
     "print(\"Average Number of Non-Zero Elements in Vectorized Articles: {}\".format(non_zero_cols))\n",
-    "\n",
     "percent_sparse = 1 - (non_zero_cols / float(X_train_tfidf.shape[1]))\n",
     "print('Percentage of columns containing ZERO: {}'.format(percent_sparse))"
    ]
@@ -598,7 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "99.9% of the columns contain a zero, meaning that's a very **sparse matrix** with 20K columns. Additionally, it seems that the average length of these tweets is 13 words."
+    "Here, we can see that 99.9% of the columns contain a zero, meaning that's a very **sparse matrix** with 20K columns. We know the amount of columns because it's the size of the total corpus vocabulary. Additionally, it seems that the average length of the individual tweets is 13 words."
    ]
   },
   {
@@ -667,7 +668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that adding `class_weight='balanced'` actually increaased precision, but decreased F1. But we'll keep that hyperparameter in there, because it would need to be added eventually anyway, to deal with the huge class imbalance in this dataset."
+    "Note that adding `class_weight='balanced'` actually increaased precision, but decreased F1. We'll keep that hyperparameter in there, because it would need to be added eventually anyway, to deal with the huge class imbalance in this dataset."
    ]
   },
   {
@@ -780,7 +781,7 @@
     "\n",
     "Generally, a slightly underfit model is preferred. This means that the model is not too specific to the training data, and it should be able to generalize well on unseen data.\n",
     "\n",
-    "We can continue to run this custom fuction on future iterations to determine each model's fit. We can also store all the testing set evaluation metrics for each model into a dictionary, and print them later for comparison."
+    "We can continue to run this custom fuction on future iterations to determine each model's fit. We can also store all the testing set evaluation metrics for each model into a dictionary, and display them in a dataframe later for comparison."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1267,7 +1268,7 @@
    "source": [
     "It's a pretty close call between the Logistic Regression and SVM baselines. But overall, the **Linear SVM model** performed the best across both uniform and weighted F1. However, there is still work to be done to bring that score up higher. \n",
     "\n",
-    "Next we'll try improving that model with other feature engineering techniques, class imbalance remedy methods and tuning hyperparameters with grid search."
+    "Next, we'll try improving that model with other feature engineering techniques, class imbalance remedy methods and tuning hyperparameters with grid search."
    ]
   },
   {
@@ -1281,7 +1282,7 @@
    "source": [
     "## Alternative Feature Engineering Methods\n",
     "\n",
-    "In this section, we can experiment with Count Vectorization and Doc2Vec as they are different ways to represent the data in a way that the machine learning models can read."
+    "In this section, we can experiment with Count Vectorization and Doc2Vec as they are different ways to represent the data in a format that the machine learning models can \"understand.\""
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1488,7 +1489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Applying Doc2Vec Data to Train Linear SVM Baseline\n",
+    "## Applying Doc2Vec Data to Train Baseline Linear SVM\n",
     "\n",
     "The custom function `vec_for_learning` simply transforms the tagged tweets into vectors that are suitable for classification model use."
    ]
@@ -1762,7 +1763,9 @@
    "source": [
     "## Count Vectorization\n",
     "\n",
-    "Count Vectorization is similar to TF-IDF Vectorization, but it simply counts the number of times each word appears in a document. Therefore, each individual tweet becomes a single vector where each element in the vector corresponds to the count of a unique words. "
+    "Count Vectorization is similar to TF-IDF Vectorization, but it simply counts the number of times each word appears in a document. Therefore, each individual tweet becomes a single vector where each element in the vector corresponds to the count of a unique word.\n",
+    "\n",
+    "It's worth noting that when we vectorize text in this way, we lose the order that the sentences were in. This is known as the **Bag of Words** appraoch, because all of the tokenized words in the corpus are thrown into a \"bag\" of vectors for the model to \"understand.\""
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1779,18 +1782,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# instantiating count vectorizor\n",
+    "# instantiating count vectorizer\n",
     "count = CountVectorizer(stop_words=stop_words)"
    ]
   },
@@ -1878,7 +1874,7 @@
    "source": [
     "Unfortunately this model did not achieve a higher F1 than the TF-IDF version of the SVM model. However, it does have a slightly higher Recall, bumping up from .437 to .5365. But as mentioned before, a balance between high recall and high F1 is important for this business context.\n",
     "\n",
-    "Additionally, I'm curious about how the other baseline models could perform with this method. Next, we can try running the second best baseline model, Logistic Regression."
+    "Additionally, I'm curious about how the other baseline models could perform with this method. We can try running the second-best baseline model, Logistic Regression, next."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -2011,9 +2007,9 @@
   },
   {
    "source": [
-    "Using Count Vectorization on the Logistic Regression baseline actually produced the highest F1 and Recall out of of the other models. It was able to achieve that \"balance\" that I was looking for before. Because although the Linear SVM with Doc2Vec had a higher Recall of 0.6346, its F1 was much lower at 0.31.\n",
+    "Using Count Vectorization on the Logistic Regression baseline actually produced the highest F1 and Recall out of all the other models. It was able to achieve that \"balance\" that I was looking for before. Because although the Linear SVM with Doc2Vec had a higher Recall of 0.6346, its F1 was much lower at 0.31.\n",
     "\n",
-    "Ultimately, it looks like this model could be the final one. Before deciding, let's attempt some resampling methods, to see if the massive class imbalance can be better fixed. Up until this point, the class imbalance has only been addressed by using the built-in `class_weight='balanced'` hyperparameter in each model."
+    "Ultimately, it looks like this model could be the final one. Before deciding, let's attempt some resampling methods, to see if the massive class imbalance can be handled better. Up until this point, the class imbalance has only been addressed by using the built-in `class_weight='balanced'` hyperparameter in each model."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -2302,7 +2298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It only removed 22 values from the majority class."
+    "It only removed 22 values from the majority class. That doesn't seem like it would be very helpful, but let's take a look at the evaluation metrics."
    ]
   },
   {
@@ -2446,7 +2442,7 @@
     "\n",
     "A full list of a Logistic Regression model's hyperparameters can be found in the documentation [here](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html).\n",
     "\n",
-    "With Logistic Regressio models, however, there are not many hyperparameters to tune. In `post_MVP.ipynb`, I created a grid search to optomize the following hyperparameters:\n",
+    "With Logistic Regression models, however, there are not many hyperparameters to tune. In `post_MVP.ipynb`, I created a grid search to optomize the following hyperparameters:\n",
     "\n",
     "- `Penality`: Used to specify the norm used in the penalization. The default is `L2`.\n",
     "- `Solver`: Algorithm to use in the optimization problem.\n",
@@ -2521,7 +2517,7 @@
    "source": [
     "As mentioned before, the evaluation metrics between all of these iterations were very similar. But ideally, we were searching for a balance between a high Recall and high F1 score.\n",
     "\n",
-    "For instance, we can see that the baseline Linear SVM with Doc2Vec had the highest Recall, but a mediocre F1 score. Whereas the Logistic Regression model with CountVectorizor had a slightly lower Recall, but a much higher F1 score. Ultimately, this model will be the final model that we use.\n",
+    "For instance, we can see that the baseline Linear SVM with Doc2Vec had the highest Recall, but a mediocre F1 score. Whereas the Logistic Regression model with CountVectorizer had a slightly lower Recall, but a much higher F1 score. Ultimately, this model will be the final model that we use.\n",
     "\n",
     "Next, let's analyze the model's overall performance and how it applies to the business case."
    ]
@@ -2540,7 +2536,7 @@
     "# Final Model Analysis:\n",
     "## Logisitic Regression with CountVectorizer\n",
     "\n",
-    "The best performing model is a Linear SVM model with `C=1.0`, `kernel='linear'`, `degree=3`, `gamma='auto'` and `class_weight='balanced'`."
+    "The best performing model is a Logistic Regression model using CountVectorizer for feature engineering. The hyperparameters were `penality=l2` and `class_weight='balanced'`."
    ]
   },
   {
@@ -2549,7 +2545,7 @@
    "source": [
     "## Pickling Final Model\n",
     "\n",
-    "The final Logistic Regression model will be pickled for future use."
+    "This final model will be pickled for future use. For instance, the interactive webapp, hosted [here](https://hate-speech-predictor.herokuapp.com/) on Heroku!"
    ]
   },
   {
@@ -2567,7 +2563,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing Evaluation Metrics"
+    "## Evaluation Metrics for Testing Set\n",
+    "\n",
+    "These scores give us a sense of how the model will perform on unseen data."
    ]
   },
   {
@@ -2591,7 +2589,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ultimately, the uniform F1 score of .3958 is so low because it is brought down by the poor predicting ability for the \"Hate Speech\" label. We'll take a closer look at this later, and why that might be happening despite all the preprocessing steps and model iterations."
+    "Ultimately, the uniform F1 score of .3958 is so low because it is brought down by the poor predicting ability for the \"Hate Speech\" label. This was seen in previous classification reports for this model.\n",
+    "\n",
+    "We'll take a closer look at why that might be happening later, despite all the preprocessing steps and model iterations."
    ]
   },
   {
@@ -2713,7 +2713,7 @@
    "source": [
     "So as expected, the final model has a True Negative Rate of 91% and a True Positive Rate of 62%.\n",
     "\n",
-    "This is consistent with the final model's evaluation metrics, where it got a Recall of .624, aka the True Positive Rate. In this business context, we would ideally want as many True Negatives as possible, because that would be identifying Hate Speech correctly. Therefore, this is where the final model could be improved.\n",
+    "This is consistent with the final model's evaluation metrics, where it got a Recall of .624, aka the True Positive Rate. In this business context, we would ideally want as many True Positives as possible, because that would be identifying Hate Speech correctly. Therefore, this is where the final model could be improved.\n",
     "\n",
     "Also, we can see that only 8.9% of predictions are False Positives. Which mean that they were classified as \"Hate Speech\" when it's not. It's great that this amount is low, because site users tend to launch complaint reports when their content is over-flagged as hate speech content when it's not.\n",
     "\n",
@@ -2753,6 +2753,13 @@
    "source": [
     "![venn](./visualizations/word_venn.png)"
    ]
+  },
+  {
+   "source": [
+    "The code for this graph can be found in [`eda_notebook.ipynb`](https://github.com/sidneykung/twitter_hate_speech_detection/blob/master/preprocessing/eda_notebook.ipynb)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
