--- a/preprocessing/eda_notebook.ipynb
+++ b/preprocessing/eda_notebook.ipynb
@@ -515,7 +515,9 @@
   },
   {
    "source": [
-    "## What Words are Only in Hate Speech?"
+    "## What Words are Only in Hate Speech?\n",
+    "\n",
+    "The purpose of this is to check whether the words unique to the \"Hate Speech\" label are threatening or especially derogatory."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1263,6 +1265,13 @@
   },
   {
    "source": [
+    "As expected, a majority of these are racist, sexist and homophobic slurs that exceed cultural slang. The fact that these words are unique to the \"Hate Speech\" label affirm that it's indeed hate speech that should be flagged and taken down."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "## Visualizing Unique Words with Venn Diagram"
    ],
    "cell_type": "markdown",
@@ -1434,7 +1443,7 @@
   },
   {
    "source": [
-    "## CrowdFlow Votes EDA\n",
+    "## CrowdFlower Votes\n",
     "\n",
     "The first 3 columns of the dataframe indicate how many votes went into decided each label. Each tweet's label was decided by majority-rules. Let's see if we can pull any useful information from these columns."
    ],
@@ -1538,15 +1547,6 @@
     "# distribution of vote counts for other_votes\n",
     "clean_df.other_votes.hist()"
    ]
-  },
-  {
-   "source": [
-    "### ^ intrepret these\n",
-    "\n",
-    "maybe these can be conbiined into 1 graph?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   },
   {
    "source": [
