--- a/preprocessing/uncensored_hashtags.ipynb
+++ b/preprocessing/uncensored_hashtags.ipynb
@@ -106,13 +106,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "source": [
     "## Filtering Out Hashtags From Raw Tweets"
    ],
@@ -682,17 +675,12 @@
   },
   {
    "source": [
-    "### Now that the word clouds are joined, let's censor them."
+    "#### Now that the word clouds are joined, let's censor them.\n",
+    "\n",
+    "Please refer to `censored_hashtags.ipynb` to see the censoring process."
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
