--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -2740,7 +2740,7 @@
     "**This performance is indicative of the two major roadblocks of the project:** \n",
     "\n",
     "1. Massive class imbalance of the dataset\n",
-    "2. Model's inability to identify what constitutes as hate speech.\n",
+    "2. Model's inability to \"understand\" the nuances of hate speech\n",
     "\n",
     "The issue of class imbalance is manageable with preprocessing techniques and oversampling/undersampling techniques. However, identifying hate speech is an overall problem that many major tech companies like Twitter, Facebook and Instagram are still struggling with.\n",
     "\n",
